--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,12 +3,17 @@
           package="com.lutours.tuwen"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="18"/>
+    <uses-sdk android:minSdkVersion="17"/>
+    <!--http://stackoverflow.com/questions/5991319/capture-image-from-camera-and-display-in-activity/5991757#5991757-->
+    <uses-feature android:name="android.hardware.camera"></uses-feature>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="MainActivity"
-                  android:label="@string/app_name">
+        <activity android:name=".view.MainActivity"
+                  android:label="@string/app_name"
+                  android:windowSoftInputMode="stateAlwaysVisible">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+            <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
