--- a/project.properties
+++ b/project.properties
@@ -12,6 +12,7 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=../ActionBarSherlock/actionbarsherlock
+android.library.reference.1=../../ActionBarSherlock/actionbarsherlock
+
 
 
